Expose deployment context registry
